# RestfulLlama

./: .gitattributes  .gitignore  0_questions.jsonl  DockerFile  Dockerfile  README.md  admin_docs.json  api_parser.py  code_executor.py  data_analyser.py  data_cleaner.py  data_preparer.py  dataset_generator.py  docker-compose.yml  dockerfile  file_finder.py  fine_tuner.py  inference.py  input_1.7z  input_2.7z  input_3.7z  llm_evaluator.py  local_dp.py  main.py  merge_models.py  model_converser.py  project_runner.sh  prompt_helpers.py  pyproject.toml  question.jsonl  requirements.txt  rest_fine_tune (1).jsonl  schema_processor.py  swagger_reader.py  synthetic_dataset_generation.py  test_dataset.jsonl  upload_model.py  wandb_test.py
.devcontainer/: devcontainer.json  docker-compose.yml  dockerfile
artifacts/: RestfulLlama_machine_learning_pipeline.drawio
data/: 0_questions.jsonl  training_data_set.jsonl
data_generation/: .gitattributes  helper.py  raw_api_parser.py  schema_processor.py  synthetic_dataset_generation.py
evaluation/: llm_evaluator.py
evaluation/evaluation_data/: API_docs.json  Meta-Llama-3-8B-Instruct-GGUF_limited_schema_context_history.json  Meta-Llama-3-8B-Instruct-GGUF_partial_schema_context_history.json  Meta-Llama-3-8B-Instruct-GGUF_whole_context_history.json  Restful-Llama-Instruct-8b-gguf_limited_schema_context_history.json  full_admin_api.json  (+5 more)
fine-tuning/: db.sqlite3  fine_tuner.py
fine_tuning/: fine_tuner.py
notebooks/: bloom_with_8bit.ipynb
shared/: __init__.py  helper_funcs.py  schema_processor.py
