[tool.poetry]
name = "fine-tune"
version = "0.1.0"
description = ""
authors = ["Tom <tkk100@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitsandbytes = "^0.42.0"
jupyter = "^1.0.0"
transformers = "^4.36.2"
datasets = "^2.16.1"
accelerate = "^0.26.1"
peft = "^0.7.1"
safetensors = "^0.4.1"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.11"
trl = "^0.7.10"
tensorboard = "^2.15.1"
torch = "^2.0.1"
wandb = "^0.12.7"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu111/torch_stable.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
