[tool.poetry]
name = "restful-llama"
version = "0.1.0"
description = ""
authors = ["Thomas Knowles <tkk100@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
optuna = "^3.6.1"
openai = "^1.40.3"
structlog = "^24.4.0"
huggingface-hub = "^0.24.5"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
